Updated the Flowable WAR application.properties

--- a/projects/spring-boot/server/src/main/resources/application.properties
+++ b/projects/spring-boot/server/src/main/resources/application.properties
@@ -3,16 +3,19 @@ spring.profiles.active=@spring.profiles.active@
 spring.main.banner-mode=off
 spring.jpa.open-in-view=false
 
+# spring.jpa.properties.hibernate.order_by.default_null_ordering=last
+
 server.port=3001
 
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:10001/auth/realms/development/protocol/openid-connect/certs
 
 spring.data.rest.base-path=/api
 
+# Logging
 logging.level.root=INFO
-logging.level.org.springframework.security=WARN
+logging.level.org.flowable=WARN
 logging.level.org.hibernate.SQL=WARN
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=WARN
-logging.level.org.flowable=WARN
+logging.level.org.springframework.security=WARN
 
 # https://docs.spring.io/spring-boot/docs/current/reference/html/appendix-application-properties.html
