Updated the Spring JPA properties

--- a/projects/spring-boot/server/src/main/resources/application-dev.properties
+++ b/projects/spring-boot/server/src/main/resources/application-dev.properties
@@ -4,14 +4,10 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/serendipity
 spring.datasource.username=admin
 spring.datasource.password=secret
 
-# Keep the connection alive if idle for a long time
-# spring.datasource.testWhileIdle=true
-# spring.datasource.validationQuery=SELECT 1
-
 # Spring JPA
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.hibernate.naming.physical-strategy=com.vladmihalcea.hibernate.type.util.CamelCaseToSnakeCaseNamingStrategy
+spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.hibernate.naming.physical-strategy=com.vladmihalcea.hibernate.type.util.CamelCaseToSnakeCaseNamingStrategy
 
 # See: docker-compose.yml
 # environment:
