--- a/projects/spring-boot/server/src/main/resources/application-test.properties
+++ b/projects/spring-boot/server/src/main/resources/application-test.properties
@@ -4,10 +4,14 @@ spring.datasource.url=jdbc:h2:~/h2/serendipity;AUTO_SERVER=TRUE;AUTO_SERVER_PORT
 spring.datasource.username=admin
 spring.datasource.password=secret
 
+# Keep the connection alive if idle for a long time
+# spring.datasource.testWhileIdle=true
+# spring.datasource.validationQuery=SELECT 1
+
 # Spring JPA
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.hibernate.naming.physical-strategy=com.vladmihalcea.hibernate.type.util.CamelCaseToSnakeCaseNamingStrategy
+spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.hibernate.naming.physical-strategy=com.vladmihalcea.hibernate.type.util.CamelCaseToSnakeCaseNamingStrategy
 
 # H2 Console
 spring.h2.console.enabled=true
