Updated the Spring JPA properties

--- a/projects/spring-boot/server/src/main/resources/application.properties
+++ b/projects/spring-boot/server/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.data.rest.base-path=/api
 
 # Logging
 logging.level.root=INFO
-logging.level.org.flowable=INFO
+logging.level.org.flowable=DEBUG
 logging.level.org.hibernate.SQL=WARN
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=WARN
 logging.level.org.springframework.security=WARN
