Updated the Spring JPA properties

--- a/projects/spring-boot/server/flowable/wars/application.properties
+++ b/projects/spring-boot/server/flowable/wars/application.properties
@@ -3,7 +3,7 @@ spring.jpa.open-in-view=false
 
 # Logging
 logging.level.root=INFO
-logging.level.org.flowable=WARN
+logging.level.org.flowable=INFO
 logging.level.org.hibernate.SQL=WARN
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=WARN
 logging.level.org.springframework.security=WARN
