Updated the Spring JPA properties

--- a/projects/spring-boot/pom.xml
+++ b/projects/spring-boot/pom.xml
@@ -124,11 +124,19 @@
     </dependency>
 
     <!--
+
+    <dependency>
+      <groupId>org.flowable</groupId>
+      <artifactId>flowable-spring-boot-starter-rest</artifactId>
+      <version>${flowable.version}</version>
+    </dependency>
+
     <dependency>
       <groupId>org.flowable</groupId>
       <artifactId>flowable-spring-boot-starter-process-rest</artifactId>
       <version>${flowable.version}</version>
     </dependency>
+
     -->
 
     <dependency>
