--- a/projects/spring-boot/pom.xml
+++ b/projects/spring-boot/pom.xml
@@ -116,16 +116,37 @@
 
     <!-- https://flowable.com/open-source/docs/bpmn/ch05a-Spring-Boot/#flowable-starters -->
     <!-- https://flowable.com/open-source/docs/bpmn/ch05a-Spring-Boot/#flowable-auto-configuration-classes -->
+    <!-- https://github.com/flowable/flowable-engine/blob/master/modules/flowable-spring-boot/flowable-spring-boot-starters/flowable-spring-boot-starter/pom.xml -->
 
     <dependency>
       <groupId>org.flowable</groupId>
       <artifactId>flowable-spring-boot-starter-app</artifactId>
       <version>${flowable.version}</version>
     </dependency>
-
     <dependency>
       <groupId>org.flowable</groupId>
       <artifactId>flowable-spring-boot-starter-process-rest</artifactId>
+      <version>${flowable.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.flowable</groupId>
+      <artifactId>flowable-spring-boot-starter-dmn-rest</artifactId>
+      <version>${flowable.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.flowable</groupId>
+      <artifactId>flowable-spring-configurator</artifactId>
+      <version>${flowable.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.flowable</groupId>
+      <artifactId>flowable-form-spring-configurator</artifactId>
+      <version>${flowable.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.flowable</groupId>
+      <artifactId>flowable-dmn-spring-configurator</artifactId>
       <version>${flowable.version}</version>
     </dependency>
 
@@ -138,7 +159,7 @@
     <!--
     <dependency>
       <groupId>org.flowable</groupId>
-      <artifactId>flowable-spring-boot-starter</artifactId>
+      <artifactId>flowable-spring-boot-starter-rest</artifactId>
       <version>${flowable.version}</version>
     </dependency>
     -->
